--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
               <a
-                href="https://forms.gle/VeDrG7etEUxCuQyS6"
+                href="https://forms.gle/n2uDaaLBWqBfricy7"
                 class="text-dark text-decoration-none"
                 target="_blank"
                 >Share your voice</a
@@ -92,15 +92,12 @@
           recreation and the ability to express themselves in the community and
           all their great ideas and talents.
         </p>
-        <div class="embed-responsive embed-responsive-16by9 text-center">
-          <iframe
-            class=".embed-responsive-item"
-            src="images/introVideo.mp4"
-            width="100%"
-            height="500"
-            allowfullscreen
-          ></iframe>
-        </div>
+        <video width="100%" height:"500" controls>
+          <source src="images/introVideo.mp4" type="video/mp4">
+
+          Unable to load. Download the video here:
+          <a href="images/introVideo.mp4">MP4</a>
+        </video>
         <div class="embed-responsive text-center">
           <iframe
             class=".embed-responsive-item"
@@ -120,7 +117,7 @@
       ></path>
     </svg>
     <footer class="text-light text-center text-lg-start">
-      <div class="text-center p-3">© 2023 Copyright: All Together Now</div>
+      <div class="text-center p-3">Copyright © 2023 All Together Now</div>
     </footer>
   </body>
   <script src="script.js"></script>
