--- a/index.html
+++ b/index.html
@@ -107,6 +107,31 @@
             allowfullscreen
           ></iframe>
         </div>
+        <h1>About Us</h1>
+        <a href="">
+          <img src="images/MMCTV.png" alt=" logo">
+        </a>
+        <a href="">
+          <img src="images/MMUUSD2 White Circle.png" alt=" logo">
+        </a>
+        <a href="">
+          <img src="images/NWVT-Prevention-Network-logo-horizontal.png" alt=" logo">
+        </a>
+        <a href="">
+          <img src="images/OCCC-Logo-Web-Larger.png" alt=" logo">
+        </a>
+        <a href="">
+          <img src="images/UVM Extension.jpg" alt=" logo">
+        </a>
+        <a href="">
+          <img src="images/VDH_LogoPrimary-01.png" alt=" logo">
+        </a>
+        <a href="">
+          <img src="images/cscsidebysidelogo-2.png" alt=" logo">
+        </a>
+        <a href="">
+          <img src="images/logo-richmondvt.png" alt=" logo">
+        </a>
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
