--- a/index.html
+++ b/index.html
@@ -108,30 +108,48 @@
           ></iframe>
         </div>
         <h1>About Us</h1>
-        <a href="">
-          <img src="images/MMCTV.png" alt=" logo">
-        </a>
-        <a href="">
-          <img src="images/MMUUSD2 White Circle.png" alt=" logo">
-        </a>
-        <a href="">
-          <img src="images/NWVT-Prevention-Network-logo-horizontal.png" alt=" logo">
-        </a>
-        <a href="">
-          <img src="images/OCCC-Logo-Web-Larger.png" alt=" logo">
-        </a>
-        <a href="">
-          <img src="images/UVM Extension.jpg" alt=" logo">
-        </a>
-        <a href="">
-          <img src="images/VDH_LogoPrimary-01.png" alt=" logo">
-        </a>
-        <a href="">
-          <img src="images/cscsidebysidelogo-2.png" alt=" logo">
-        </a>
-        <a href="">
-          <img src="images/logo-richmondvt.png" alt=" logo">
-        </a>
+        <div class="row">
+          <div class="column">
+            <a href="">
+              <img src="images/MMCTV.png" alt="MMCTV logo" style="height:100px;">
+            </a>
+          </div>
+          <div class="column">
+            <a href="">
+              <img src="images/MMUUSD2 White Circle.png" alt="MMUUSD logo" style="height:100px;">
+            </a>
+          </div>
+          <div class="column">
+            <a href="">
+              <img src="images/NWVT-Prevention-Network-logo-horizontal.png" alt="Northwest Vermont Prevention Network logo" style="height:100px;">
+            </a>
+          </div>
+          <div class="column">
+            <a href="">
+              <img src="images/OCCC-Logo-Web-Larger.png" alt="Our Community Cares Camp logo" style="height:100px;">
+            </a>
+          </div>
+          <div class="column">
+            <a href="">
+              <img src="images/UVM Extension.jpg" alt="UVM logo" style="height:100px;">
+            </a>
+          </div>
+          <div class="column">
+            <a href="">
+              <img src="images/VDH_LogoPrimary-01.png" alt="Vermont Department of Health logo" style="height:100px;">
+            </a>
+          </div>
+          <div class="column">
+            <a href="">
+              <img src="images/cscsidebysidelogo-2.png" alt="Community Senior Center logo" style="height:100px;">
+            </a>
+          </div>
+          <div class="column">
+            <a href="">
+              <img src="images/logo-richmondvt.png" alt="Richmond logo" style="height:100px;">
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
