--- a/index.html
+++ b/index.html
@@ -110,43 +110,43 @@
         <h1>About Us</h1>
         <div class="row">
           <div class="column">
-            <a href="">
-              <img src="images/MMCTV.png" alt="MMCTV logo" style="height:100px;">
+            <a href="https://mtmansfieldctv.org/">
+              <img src="images/MMCTV.png" alt="MMCTV logo" style="width:100%">
             </a>
           </div>
           <div class="column">
-            <a href="">
-              <img src="images/MMUUSD2 White Circle.png" alt="MMUUSD logo" style="height:100px;">
+            <a href="https://www.mmuusd.org/">
+              <img src="images/MMUUSD2 White Circle.png" alt="MMUUSD logo" style="width:100%">
             </a>
           </div>
           <div class="column">
-            <a href="">
-              <img src="images/NWVT-Prevention-Network-logo-horizontal.png" alt="Northwest Vermont Prevention Network logo" style="height:100px;">
+            <a href="https://preventionnetworknwvt.org/">
+              <img src="images/NWVT-Prevention-Network-logo-horizontal.png" alt="Northwest Vermont Prevention Network logo" style="width:100%">
             </a>
           </div>
           <div class="column">
-            <a href="">
-              <img src="images/OCCC-Logo-Web-Larger.png" alt="Our Community Cares Camp logo" style="height:100px;">
+            <a href="https://www.ourcommunitycarescamp.org/">
+              <img src="images/OCCC-Logo-Web-Larger.png" alt="Our Community Cares Camp logo" style="width:100%">
             </a>
           </div>
           <div class="column">
-            <a href="">
-              <img src="images/UVM Extension.jpg" alt="UVM logo" style="height:100px;">
+            <a href="https://www.uvm.edu/extension">
+              <img src="images/UVM Extension.jpg" alt="UVM logo" style="width:100%">
             </a>
           </div>
           <div class="column">
-            <a href="">
-              <img src="images/VDH_LogoPrimary-01.png" alt="Vermont Department of Health logo" style="height:100px;">
+            <a href="https://www.healthvermont.gov/alcohol-drugs/services/community-prevention-programs">
+              <img src="images/VDH_LogoPrimary-01.png" alt="Vermont Department of Health logo" style="width:100%">
             </a>
           </div>
           <div class="column">
-            <a href="">
-              <img src="images/cscsidebysidelogo-2.png" alt="Community Senior Center logo" style="height:100px;">
+            <a href="https://www.cscvt.org/">
+              <img src="images/cscsidebysidelogo-2.png" alt="Community Senior Center logo" style="width:100%">
             </a>
           </div>
           <div class="column">
-            <a href="">
-              <img src="images/logo-richmondvt.png" alt="Richmond logo" style="height:100px;">
+            <a href="https://www.richmondvt.gov/">
+              <img src="images/logo-richmondvt.png" alt="Richmond logo" style="width:100%">
             </a>
           </div>
         </div>
