--- a/index.html
+++ b/index.html
@@ -107,49 +107,49 @@
             allowfullscreen
           ></iframe>
         </div>
-        <h1>About Us</h1>
-        <div class="row">
-          <div class="column">
-            <a href="https://mtmansfieldctv.org/">
-              <img src="images/MMCTV.png" alt="MMCTV logo" style="width:100%">
-            </a>
-          </div>
-          <div class="column">
-            <a href="https://www.mmuusd.org/">
-              <img src="images/MMUUSD2 White Circle.png" alt="MMUUSD logo" style="width:100%">
-            </a>
-          </div>
-          <div class="column">
-            <a href="https://preventionnetworknwvt.org/">
-              <img src="images/NWVT-Prevention-Network-logo-horizontal.png" alt="Northwest Vermont Prevention Network logo" style="width:100%">
-            </a>
-          </div>
-          <div class="column">
-            <a href="https://www.ourcommunitycarescamp.org/">
-              <img src="images/OCCC-Logo-Web-Larger.png" alt="Our Community Cares Camp logo" style="width:100%">
-            </a>
-          </div>
-          <div class="column">
-            <a href="https://www.uvm.edu/extension">
-              <img src="images/UVM Extension.jpg" alt="UVM logo" style="width:100%">
-            </a>
-          </div>
-          <div class="column">
-            <a href="https://www.healthvermont.gov/alcohol-drugs/services/community-prevention-programs">
-              <img src="images/VDH_LogoPrimary-01.png" alt="Vermont Department of Health logo" style="width:100%">
-            </a>
-          </div>
-          <div class="column">
-            <a href="https://www.cscvt.org/">
-              <img src="images/cscsidebysidelogo-2.png" alt="Community Senior Center logo" style="width:100%">
-            </a>
-          </div>
-          <div class="column">
-            <a href="https://www.richmondvt.gov/">
-              <img src="images/logo-richmondvt.png" alt="Richmond logo" style="width:100%">
-            </a>
-          </div>
-        </div>
+      </div>
+    </div>
+    <h1>Thank You to Our Partners</h1>
+    <div class="row">
+      <div class="column">
+        <a href="https://mtmansfieldctv.org/">
+          <img src="images/MMCTV.png" alt="MMCTV logo" style="width:100%">
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://www.mmuusd.org/">
+          <img src="images/MMUUSD2 White Circle.png" alt="MMUUSD logo" style="width:100%">
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://preventionnetworknwvt.org/">
+          <img src="images/NWVT-Prevention-Network-logo-horizontal.png" alt="Northwest Vermont Prevention Network logo" style="width:100%">
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://www.ourcommunitycarescamp.org/">
+          <img src="images/OCCC-Logo-Web-Larger.png" alt="Our Community Cares Camp logo" style="width:100%">
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://www.uvm.edu/extension">
+          <img src="images/UVM Extension.jpg" alt="UVM logo" style="width:100%">
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://www.healthvermont.gov/alcohol-drugs/services/community-prevention-programs">
+          <img src="images/636286256034344365-VDH-logo-1-.png" alt="Vermont Department of Health logo" style="width:100%">
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://www.cscvt.org/">
+          <img src="images/cscsidebysidelogo-2.png" alt="Community Senior Center logo" style="width:100%">
+        </a>
+      </div>
+      <div class="column">
+        <a href="https://www.richmondvt.gov/">
+          <img src="images/logo-richmondvt.png" alt="Richmond logo" style="width:100%">
+        </a>
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
