--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
         <h1>Thank You to Our Partners</h1>
         <div class="row">
-          <div class="column" style="width: 95%; height: 400px;">
+          <div class="column">
             <a href="https://www.healthvermont.gov/alcohol-drugs/services/community-prevention-programs" target="_blank" rel="noopener noreferrer">
               <img src="images/636286256034344365-VDH-logo-1-.png" alt="Vermont Department of Health logo" style="width:100%">
             </a>
