--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
               <img src="images/logo-richmondvt.png" alt="Richmond logo" style="width:100%">
             </a>
           </div>
+        </div>
       </div>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
