--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <img src="images/636286256034344365-VDH-logo-1-.png" alt="Vermont Department of Health logo" style="width:100%">
             </a>
           </div>
-          <div class="column">
+          <div class="column2">
             <a href="https://www.mmuusd.org/" target="_blank" rel="noopener noreferrer">
               <img src="images/MMUUSD2 White Circle.png" alt="MMUUSD logo" style="width:100%">
             </a>
@@ -129,7 +129,7 @@
               <img src="images/OCCC-Logo-Web-Larger.png" alt="Our Community Cares Camp logo" style="width:100%">
             </a>
           </div>
-          <div class="column">
+          <div class="column2">
             <a href="https://www.uvm.edu/extension" target="_blank" rel="noopener noreferrer">
               <img src="images/UVM Extension.jpg" alt="UVM logo" style="width:100%">
             </a>
