--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
             allowfullscreen
           ></iframe>
         </div>
-        <h1>Thank You to Our Partners</h1>
+        <h1>Thank You to Our Partners
+        </h1>
         <div class="row">
           <div class="column">
             <a href="https://www.healthvermont.gov/alcohol-drugs/services/community-prevention-programs" target="_blank" rel="noopener noreferrer">
@@ -124,10 +125,12 @@
               <img src="images/NWVT-Prevention-Network-logo-horizontal.png" alt="Northwest Vermont Prevention Network logo" style="width:100%">
             </a>
           </div>
-          <div class="column">
-            <a href="https://www.ourcommunitycarescamp.org/" target="_blank" rel="noopener noreferrer">
-              <img src="images/OCCC-Logo-Web-Larger.png" alt="Our Community Cares Camp logo" style="width:100%">
-            </a>
+          <div class="verticalcenter">
+            <div class="column">
+              <a href="https://www.ourcommunitycarescamp.org/" target="_blank" rel="noopener noreferrer">
+                <img src="images/OCCC-Logo-Web-Larger.png" alt="Our Community Cares Camp logo" style="width:100%">
+              </a>
+            </div>
           </div>
           <div class="column2">
             <a href="https://www.uvm.edu/extension" target="_blank" rel="noopener noreferrer">
