--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <h1>Thank You to Our Partners
         </h1>
         <div class="row">
-          <div class="column3">
+          <div class="column">
             <a href="https://www.healthvermont.gov/alcohol-drugs/services/community-prevention-programs" target="_blank" rel="noopener noreferrer">
               <img src="images/636286256034344365-VDH-logo-1-.png" alt="Vermont Department of Health logo" style="width:100%">
             </a>
@@ -120,12 +120,12 @@
               <img src="images/MMUUSD2 White Circle.png" alt="MMUUSD logo" style="width:100%">
             </a>
           </div>
-          <div class="column4">
+          <div class="column">
             <a href="https://preventionnetworknwvt.org/" target="_blank" rel="noopener noreferrer">
               <img src="images/NWVT-Prevention-Network-logo-horizontal.png" alt="Northwest Vermont Prevention Network logo" style="width:100%">
             </a>
           </div>
-          <div class="column4">
+          <div class="column">
             <a href="https://www.ourcommunitycarescamp.org/" target="_blank" rel="noopener noreferrer">
               <img src="images/OCCC-Logo-Web-Larger.png" alt="Our Community Cares Camp logo" style="width:100%">
             </a>
