--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">All Together Now</h1>
           <p class="lead">
-            Equitable Mental Health & Wellbeing for Youth A new youth and
-            community designed fellowship building awareness, compassion and
-            opportunity. <br />
+            Equitable Mental Health & Wellbeing from a youth and community-based
+            organization. <br />
             <br />
             Serving Bolton, Huntington, Jericho, Richmond, and Underhill.
           </p>
