--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Equitable Mental Health & Wellbeing from a youth and community-based organization. Serving Bolton, Huntington, Jericho, Richmond, and Underhill.">
+    <meta name="keywords" content="AllTogetherNow, All Together Now, All Together Now VT, All Together Now 802, 802, VT, Vermont, findhelp, Find help">
+    <title>All Together Now</title>
     <link rel="icon" type="image/png" href="images/ATN-favicon.PNG">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
