--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </svg>
     <footer class="text-light text-center text-lg-start">
       <div class="text-center p-3>
-        Contact: <a href="mailto:projectalltogethernow@gmail.com>projectalltogethernow@gmail.com</a> or <a href="mailto:admin@projectalltogethernow.org">admin@projectalltogethernow.org</a>
+        Contact: <a href="mailto:projectalltogethernow@gmail.com">projectalltogethernow@gmail.com</a> or <a href="mailto:admin@projectalltogethernow.org">admin@projectalltogethernow.org</a>
       </div>
       <br>
       <div class="text-center p-3">Copyright © 2023 All Together Now</div>
