Contact Info updated

--- a/index.html
+++ b/index.html
@@ -164,10 +164,9 @@
       ></path>
     </svg>
     <footer class="text-light text-center text-lg-start">
-      <div class="text-center p-3>
-        Contact: <a href="mailto:projectalltogethernow@gmail.com">projectalltogethernow@gmail.com</a> or <a href="mailto:admin@projectalltogethernow.org">admin@projectalltogethernow.org</a>
+      <div class="text-center p-3">
+        Contact: <a href="mailto:ProjectAllTogetherNow@gmail.com" style="color:white">Projectalltogethernow@gmail.com</a>. Secondary contact: <a href="mailto:admin@projectalltogethernow.org"  style="color:white">Admin@projectalltogethernow.org</a>.
       </div>
-      <br>
       <div class="text-center p-3">Copyright © 2023 All Together Now</div>
     </footer>
   </body>
